@@ -10,10 +10,10 @@
 		Taijin=0;
 		// -->
 	</script>
-	<script type="text/javascript" src="js/head.js?v=4"></script>
-	<script type="text/javascript" src="js/item.js?v=4"></script>
-	<script type="text/javascript" src="js/etc.js?v=4"></script>
-	<script type="text/javascript" src="js/skill.js?v=4"></script>
+	<script type="text/javascript" src="js/head.js?v=5"></script>
+	<script type="text/javascript" src="js/item.js?v=5"></script>
+	<script type="text/javascript" src="js/etc.js?v=5"></script>
+	<script type="text/javascript" src="js/skill.js?v=5"></script>
 	<script type="text/javascript" src="js/libs/base64.js"></script>
 	<script type="text/javascript" src="js/libs/rawinflate.js"></script>
 	<script type="text/javascript" src="js/libs/rawdeflate.js"></script>
@@ -35,6 +35,15 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
+		<span><b>2021-01-24</b></span>
+		<div id="changelog20210124">
+			<ul>
+				<li>Added Thanatos Despero Mask</li>
+				<li>Fixed critical rate with Katar</li>
+				<li>Reworked Potion Pitcher Calculator</li>
+				<li>Fixed Shield Chain and Shield Boomerang damage computation</li>
+			</ul>
+		</div>
 		<span><b>2020-12-21</b></span>
 		<div id="changelog20201221">
 			<ul>
@@ -1208,9 +1217,9 @@
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="js/monster.js?v=4"></script>
-<script type="text/javascript" src="js/card.js?v=4"></script>
-<script type="text/javascript" src="js/foot.js?v=4"></script>
+<script type="text/javascript" src="js/monster.js?v=5"></script>
+<script type="text/javascript" src="js/card.js?v=5"></script>
+<script type="text/javascript" src="js/foot.js?v=5"></script>
 </form>
 		<script type="text/javascript">
 			function Toogle(x,t){
